# wisp

./: .gitignore  CMakeLists.txt  CONTRIB_AUDIT.md  a.out  automerge.sh  fix_all.py  fix_event_target.py  fix_qjs_handler.py  js_atod.c  parse_exponent  parse_exponent.c  parse_exponent2  parse_exponent2.c  patch.diff  patch_event_target.patch  patch_font_cb44.py  patch_font_cb45.py  patch_font_cb46.py  patch_font_face.py  patch_font_face2.py  patch_font_face3.py  patch_font_face_cache.py  patch_font_face_cache2.py  patch_font_face_cache3.py  patch_font_face_cache4.py  patch_font_face_cache5.py  patch_layout_h.py  patch_nssprite.diff  plan14.md  plan_dirty_bits.md  run_layout_debug.patch  run_layout_debug2.patch  run_layout_debug3.patch  run_layout_debug4.patch  run_layout_debug5.patch  run_layout_debug6.patch  run_tests.sh  test.c  test.mvg  test_fail  (+6 more)
.github/workflows/: ci.yml
contrib/libcss/: CMakeLists.txt  properties.toml
contrib/libcss/build-aux/: generate_cascade.py  property_generator.py
contrib/libcss/include/libcss/: computed.h  properties.h
contrib/libcss/src/bytecode/: opcodes.h  opcodes_manual.h
contrib/libcss/src/parse/: keywords.gen  propstrings.c  propstrings.h
contrib/libcss/src/parse/properties/: parser_wrapper.py  properties.c  properties.gen  properties.h
contrib/libcss/src/select/: computed.c  dispatch.c  select_config.py  select_generator.py
contrib/libcss/src/select/properties/: fill.c  font_weight.c  properties.h
contrib/libdom/: CMakeLists.txt
contrib/libdom/src/core/: attr.c  cdatasection.c  characterdata.c  comment.c  doc_fragment.c  document.c  document.h  document_type.c  element.c  entity_ref.c  node.c  node.h  pi.c  text.c
contrib/libdom/src/html/: html_anchor_element.c  html_applet_element.c  html_area_element.c  html_base_element.c  html_basefont_element.c  html_body_element.c  html_br_element.c  html_button_element.c  html_canvas_element.c  html_collection.c  html_directory_element.c  html_div_element.c  html_dlist_element.c  html_document.c  html_element.c  html_fieldset_element.c  html_font_element.c  html_form_element.c  html_frame_element.c  html_frameset_element.c  html_head_element.c  html_heading_element.c  html_hr_element.c  html_html_element.c  html_iframe_element.c  html_image_element.c  html_input_element.c  html_isindex_element.c  html_label_element.c  html_legend_element.c  html_li_element.c  html_link_element.c  html_map_element.c  html_menu_element.c  html_meta_element.c  html_mod_element.c  html_object_element.c  html_olist_element.c  html_opt_group_element.c  html_option_element.c  (+17 more)
contrib/quickjs-ng/: dtoa.c  qjsc.c  quickjs.c  quickjs.c.orig  quickjs.h  run-test262.c
frontends/beos/: gui.cpp
frontends/gtk/: gui.c  misc.c  misc.h
frontends/monkey/: browser.c  main.c
frontends/qt/: misc.cpp
frontends/windows/: font.c  gui.c  main.c  plot.c
include/wisp/: form.h  layout.h  misc.h
include/wisp/content/: content_protected.h
include/wisp/desktop/: options.h
include/wisp/ipc/: ipc.h  ipc.h.orig  task_queue.h
include/wisp/utils/: errors.h  errors.h.orig  nsurl.h  task_queue.h  thread_pool.h
plans/: js_migration_analysis.md  multi_process_assessment.md  multi_process_upgrade_outline.md
src/: CMakeLists.txt  CMakeLists.txt.orig  CMakeLists.txt.rej
src/content/: content.c  fs_backing_store.c  llcache.c  urldb.c
src/content/fetchers/: curl.c
src/content/fetchers/about/: certificate.c  chart.c  testament.c
src/content/handlers/css/: css.c  dump.c  internal.c  select.c
src/content/handlers/html/: box_construct.c  box_construct.c.orig  box_inspect.c  box_manipulate.c  box_manipulate.h  box_normalise.c  box_special.c  css.c  font_face.c  form.c  html.c  imagemap.c  interaction.c  layout.c  layout_flex.c  layout_grid.c  layout_grid.c.orig  object.c  (+5 more)
src/desktop/: browser_private.h  browser_window.c  browser_window.c.orig  browser_window.c.rej  renderer.c  renderer.c.orig  scrollbar.c  textarea.c  treeview.c  wisp.c
src/test/: CMakeLists.txt  bloom.c  box_construct_race_test.c  grid_construct_test.c  grid_layout_test.c  hashtable.c  layout_flex_test.c  layout_inline_grid_test.c  layout_margin_collapse_style.c  layout_margin_collapse_style.h  layout_margin_collapse_test.c  messages.c  nsoption.c  nsurl.c  svg_redraw_comboflush_test.c  svg_redraw_extlink_test.c  test_quickjs.c  urldbtest.c  useragent.c
src/test/data/: urldb-out
src/utils/: arena.c  arena.h  corestrings.c  libdom.c  log.c  messages.c  nsurl.h  talloc.c  task_queue.c  thread_pool.c  useragent.c  utils.c
src/utils/ipc/: ipc.c  ipc.c.orig  ipc_plotter.c  ipc_plotter.c.orig  task_queue.c  task_queue.c.orig
src/utils/nsurl/: nsurl.c  parse.c
test/: Google.mhtml  avif_test.html  css-vars.html  css_variable_rgba_test.html  flex_calc_test.html  font-variant-test.html  font_width_test.html  gradient_test.html  grey_background_test.html  grid_autoflow_test.html  grid_debug_test.html  grid_fr_test.html  grid_phase1_test.html  grid_placement_test.html  grid_test.html  id_gradient_test.html  linear_gradient_test.html  nested_flex_cross_test.html  nth-child-of-test.html  reproduce_crash.html  reproduce_grid.html  reproduce_widgets.html  svg_gradient_test.html  table_padding.html  test-absolute-children.html  test-absolute-simple.html  test_abs_align.html  test_logical_props.html  test_qjs.py
test/SVGs/: image_dimension_test.html  inline_svg_test.html  inline_svg_use_test.html  test-svg-par.html  test-svg-use.html
test/flex/: article_height.html  escaped_selector_test.html  grid_pass3_test.html  hotnews_grid.html  media_query_test.html  mx_auto_simple.html  mx_auto_test.html  startupcafe_exact_test.html  startupcafe_simple.html
test/layout-bugs/: inline-block-max-height.html
test/test_data/: flex_margin_test.html  hotnews_flex_overflow.html
test/test_data/object_fit/: test.html
test/test_data/object_position/: test.html
test/test_data/transform/: test.html
test/wisp-homepage/: about.html  contact.html  documentation.html  downloads.html  index.html  style.css
tests/SVGs/: test-opacity.html  test-svg-search-icon.html
(+23 files in other folders)
