add_subdirectory(src/parse/properties/gen_parser)
include(${CMAKE_SOURCE_DIR}/src/cmake/libcss_helpers.cmake)
option(WISP_VERBOSE_GEN "Enable verbose libcss code generation output" OFF)

# Check for TOML parsing support (required for properties.toml)
# Python 3.11+ has tomllib built-in; older versions need 'tomli' package.
execute_process(
    COMMAND ${PYTHON3} -c "
try:
    import tomllib
except ModuleNotFoundError:
    import tomli
print('ok')
"
    OUTPUT_VARIABLE TOML_CHECK
    ERROR_QUIET
    OUTPUT_STRIP_TRAILING_WHITESPACE
)

if(NOT TOML_CHECK STREQUAL "ok")
    message(FATAL_ERROR
        "Python TOML parsing module not found.\n"
        "Python 3.11+ has built-in 'tomllib'. For older versions, install 'tomli':\n"
        "  - Arch Linux: pacman -S python-tomli\n"
        "  - pip: pip install tomli\n"
        "This is required for reading libcss properties.toml."
    )
endif()


# Output directory for generated property registration files
set(LIBCSS_PROPREG_OUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/src/generated)
set(LIBCSS_CASCADE_GEN_DIR ${CMAKE_CURRENT_BINARY_DIR}/src/select/cascade_gen)
set(LIBCSS_PROP_GEN_BUILT ${LIBCSS_PROPREG_OUT_DIR}/properties.gen)

# Source properties.gen is read at configure time for property name extraction.
# At build time, property_generator.py generates a fresh properties.gen from
# properties.toml into the build directory, which gen_parser then consumes.
set(LIBCSS_PROP_GEN ${CMAKE_SOURCE_DIR}/contrib/libcss/src/parse/properties/properties.gen)
libcss_extract_property_names(${LIBCSS_PROP_GEN} LIBCSS_PROP_NAMES)
set(LIBCSS_GEN_PROPERTIES)
foreach(PROP ${LIBCSS_PROP_NAMES})
    list(APPEND LIBCSS_GEN_PROPERTIES "${CMAKE_BINARY_DIR}/contrib/libcss/properties/autogenerated_${PROP}.c")
endforeach()
add_custom_command(
    OUTPUT ${LIBCSS_GEN_PROPERTIES}
    COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/contrib/libcss/properties
    COMMAND ${PYTHON3} ${CMAKE_SOURCE_DIR}/contrib/libcss/src/parse/properties/parser_wrapper.py ${CMAKE_BINARY_DIR}/contrib/libcss/properties $<TARGET_FILE:gen_parser> ${LIBCSS_PROP_GEN_BUILT}
    DEPENDS gen_parser ${LIBCSS_PROPREG_PYTHON_FILES} ${CMAKE_SOURCE_DIR}/contrib/libcss/src/parse/properties/parser_wrapper.py
)
add_custom_target(libcss_properties DEPENDS ${LIBCSS_GEN_PROPERTIES})

set(LIBCSS_SELECT_OUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/src/select)
set(LIBCSS_SELECT_GEN_FILES
    ${LIBCSS_SELECT_OUT_DIR}/autogenerated_computed.h
    ${LIBCSS_SELECT_OUT_DIR}/autogenerated_propget.h
    ${LIBCSS_SELECT_OUT_DIR}/autogenerated_propset.h
    ${LIBCSS_SELECT_OUT_DIR}/autogenerated_destroy.inc
)
add_custom_command(
    OUTPUT ${LIBCSS_SELECT_GEN_FILES}
    COMMAND ${CMAKE_COMMAND} -E make_directory ${LIBCSS_SELECT_OUT_DIR}
    COMMAND ${PYTHON3} ${CMAKE_SOURCE_DIR}/contrib/libcss/src/select/select_generator.py --toml ${CMAKE_SOURCE_DIR}/contrib/libcss/properties.toml ${LIBCSS_SELECT_OUT_DIR} $<$<OR:$<BOOL:${WISP_VERBOSE_GEN}>,$<BOOL:${CMAKE_VERBOSE_MAKEFILE}>>:--verbose>
    DEPENDS ${CMAKE_SOURCE_DIR}/contrib/libcss/src/select/select_generator.py ${CMAKE_SOURCE_DIR}/contrib/libcss/src/select/select_config.py ${CMAKE_SOURCE_DIR}/contrib/libcss/src/select/assets.py ${CMAKE_SOURCE_DIR}/contrib/libcss/src/select/overrides.py ${CMAKE_SOURCE_DIR}/contrib/libcss/properties.toml
)
add_custom_target(libcss_select_gen DEPENDS ${LIBCSS_SELECT_GEN_FILES})

# Property registration generator
# Step 1: Python generates .inc files + .gperf input + properties.gen from properties.toml
# Step 2: gperf processes .gperf -> prop_hash_table.inc (perfect hash C code)
set(LIBCSS_PROPREG_PYTHON_FILES
    ${LIBCSS_PROPREG_OUT_DIR}/properties_enum.inc
    ${LIBCSS_PROPREG_OUT_DIR}/dispatch_table.inc
    ${LIBCSS_PROPREG_OUT_DIR}/propstrings_enum.inc
    ${LIBCSS_PROPREG_OUT_DIR}/propstrings_strings.inc
    ${LIBCSS_PROPREG_OUT_DIR}/prop_hash_table.gperf
    ${LIBCSS_PROPREG_OUT_DIR}/cascade_declarations.inc
    ${LIBCSS_PROPREG_OUT_DIR}/parse_declarations.inc
    ${LIBCSS_PROPREG_OUT_DIR}/unit_masks.inc
    ${LIBCSS_PROPREG_OUT_DIR}/opcodes.inc
    ${LIBCSS_PROPREG_OUT_DIR}/properties.gen
)
add_custom_command(
    OUTPUT ${LIBCSS_PROPREG_PYTHON_FILES} ${LIBCSS_CASCADE_GENERATED}
    COMMAND ${CMAKE_COMMAND} -E make_directory ${LIBCSS_PROPREG_OUT_DIR}
    COMMAND ${PYTHON3} ${CMAKE_SOURCE_DIR}/contrib/libcss/build-aux/property_generator.py
        --toml ${CMAKE_SOURCE_DIR}/contrib/libcss/properties.toml
        --output-dir ${LIBCSS_PROPREG_OUT_DIR}
        --cascade-dir ${LIBCSS_CASCADE_GEN_DIR}
        ${CMAKE_SOURCE_DIR}/contrib/libcss/src/select/dispatch.c
        ${CMAKE_SOURCE_DIR}/contrib/libcss/src/parse/keywords.gen
    DEPENDS
        ${CMAKE_SOURCE_DIR}/contrib/libcss/build-aux/property_generator.py
        ${CMAKE_SOURCE_DIR}/contrib/libcss/build-aux/generate_cascade.py
        ${CMAKE_SOURCE_DIR}/contrib/libcss/properties.toml
        ${CMAKE_SOURCE_DIR}/contrib/libcss/src/select/dispatch.c
        ${CMAKE_SOURCE_DIR}/contrib/libcss/src/parse/keywords.gen
    COMMENT "Generating property registration files and cascade .c files from properties.toml"
)

# Step 2: gperf processes .gperf -> prop_hash_table.inc
add_custom_command(
    OUTPUT ${LIBCSS_PROPREG_OUT_DIR}/prop_hash_table.inc
    COMMAND ${GPERF} ${LIBCSS_PROPREG_OUT_DIR}/prop_hash_table.gperf
        --output-file=${LIBCSS_PROPREG_OUT_DIR}/prop_hash_table.inc
    DEPENDS ${LIBCSS_PROPREG_OUT_DIR}/prop_hash_table.gperf
    COMMENT "Generating perfect hash table with gperf"
)

set(LIBCSS_PROPREG_GEN_FILES
    ${LIBCSS_PROPREG_PYTHON_FILES}
    ${LIBCSS_PROPREG_OUT_DIR}/prop_hash_table.inc
)
add_custom_target(libcss_propreg_gen DEPENDS ${LIBCSS_PROPREG_GEN_FILES})

set(PROPSRC ${LIBCSS_GEN_PROPERTIES})

include_directories("${CMAKE_SOURCE_DIR}/contrib/libcss/src")
include_directories("${CMAKE_CURRENT_BINARY_DIR}/src/select")
include_directories("${CMAKE_CURRENT_BINARY_DIR}/src")
include_directories("${CMAKE_CURRENT_BINARY_DIR}/src/generated")  # For property registration includes

# Configure-time: read properties.toml to split cascade sources into generated vs manual.
# Generated files go to LIBCSS_CASCADE_GEN_DIR (build tree), manual stay in source tree.
execute_process(
    COMMAND ${PYTHON3} -c "
import sys
try:
    import tomllib
except ModuleNotFoundError:
    import tomli as tomllib

with open(sys.argv[1], 'rb') as f:
    data = tomllib.load(f)

generated = []
manual = []
errors = []
VALID_CASCADE = {'none', 'manual', 'ident', 'length', 'length_auto',
    'length_auto_calc', 'length_normal', 'length_none',
    'bg_border_color', 'border_style', 'border_width',
    'counter', 'integer', 'page_break', 'uri_none', 'break'}

for name, props in data.items():
    if not isinstance(props, dict):
        continue
    if not props.get('enum', '').startswith('CSS_PROP_'):
        continue
    cascade = props.get('cascade')
    if cascade is None:
        errors.append(name)
        continue
    if cascade == 'none':
        continue
    elif cascade == 'manual':
        manual.append(name)
    else:
        generated.append(name)

if errors:
    print('ERROR:' + ';'.join(errors))
else:
    print('GENERATED:' + ';'.join(sorted(generated)))
    print('MANUAL:' + ';'.join(sorted(manual)))
" ${CMAKE_SOURCE_DIR}/contrib/libcss/properties.toml
    OUTPUT_VARIABLE CASCADE_SPLIT_OUTPUT
    OUTPUT_STRIP_TRAILING_WHITESPACE
    RESULT_VARIABLE CASCADE_SPLIT_RESULT
)
if(NOT CASCADE_SPLIT_RESULT EQUAL 0)
    message(FATAL_ERROR "Failed to read cascade split from properties.toml")
endif()

# Check for missing cascade fields
string(REGEX MATCH "ERROR:([^\n]*)" _err "${CASCADE_SPLIT_OUTPUT}")
if(_err)
    message(FATAL_ERROR
        "properties.toml: the following CSS_PROP_ properties are missing a required 'cascade' field: ${CMAKE_MATCH_1}\n"
        "Valid values: 'none' (no cascade file), 'manual' (hand-written .c), or a type string for auto-generation.")
endif()

# Parse the output into two lists
string(REGEX MATCH "GENERATED:([^\n]*)" _m "${CASCADE_SPLIT_OUTPUT}")
set(_gen_names "${CMAKE_MATCH_1}")
string(REGEX MATCH "MANUAL:([^\n]*)" _m "${CASCADE_SPLIT_OUTPUT}")
set(_man_names "${CMAKE_MATCH_1}")

set(LIBCSS_CASCADE_GENERATED)
foreach(name ${_gen_names})
    list(APPEND LIBCSS_CASCADE_GENERATED "${LIBCSS_CASCADE_GEN_DIR}/${name}.c")
endforeach()

set(LIBCSS_CASCADE_MANUAL)
foreach(name ${_man_names})
    list(APPEND LIBCSS_CASCADE_MANUAL "src/select/properties/${name}.c")
endforeach()

list(LENGTH LIBCSS_CASCADE_GENERATED _gen_count)
list(LENGTH LIBCSS_CASCADE_MANUAL _man_count)
message(STATUS "Cascade sources: ${_gen_count} generated, ${_man_count} manual")
# Mark generated cascade files so CMake knows they don't exist yet at configure time
set_source_files_properties(${LIBCSS_CASCADE_GENERATED} PROPERTIES GENERATED TRUE)


add_library(css ${WISP_LIB_TYPE}
	src/stylesheet.c
	src/charset/detect.c
	src/lex/lex.c
	src/parse/parse.c
	src/parse/language.c
	src/parse/important.c
	src/parse/propstrings.c
	src/parse/font_face.c
	src/parse/mq.c
	src/parse/properties/azimuth.c
	src/parse/properties/background.c
	src/parse/properties/background_image.c
	src/parse/properties/background_position.c
	src/parse/properties/border.c
	src/parse/properties/border_color.c
	src/parse/properties/border_spacing.c
	src/parse/properties/border_style.c
	src/parse/properties/border_width.c
	src/parse/properties/clip.c
	src/parse/properties/columns.c
	src/parse/properties/column_rule.c
	src/parse/properties/content.c
	src/parse/properties/cue.c
	src/parse/properties/cursor.c
	src/parse/properties/elevation.c
	src/parse/properties/fill_opacity.c
	src/parse/properties/flex.c
	src/parse/properties/flex_flow.c
	src/parse/properties/gap.c
	src/parse/properties/place_content.c
	src/parse/properties/font.c
	src/parse/properties/font_family.c
	src/parse/properties/font_weight.c
	src/parse/properties/list_style.c
	src/parse/properties/list_style_type.c
	src/parse/properties/margin.c
	src/parse/properties/opacity.c
	src/parse/properties/outline.c
	src/parse/properties/overflow.c
	src/parse/properties/padding.c
	src/parse/properties/pause.c
	src/parse/properties/play_during.c
	src/parse/properties/properties.c
	src/parse/properties/quotes.c
	src/parse/properties/stroke_opacity.c
	src/parse/properties/text_decoration.c
	src/parse/properties/utils.c
	src/parse/properties/voice_family.c
	src/parse/properties/grid_template_columns.c
	src/parse/properties/grid_template_rows.c
	src/parse/properties/grid_column.c
	src/parse/properties/grid_row.c
	src/parse/properties/grid_area.c
	src/parse/properties/grid_auto_flow.c
	src/parse/properties/object_position.c
	src/parse/properties/transform.c
	${PROPSRC}
	src/select/properties/helpers.c
	${LIBCSS_CASCADE_MANUAL}
	${LIBCSS_CASCADE_GENERATED}
	src/select/arena.c
	src/select/calc.c
	src/select/computed.c
	src/select/dispatch.c
	src/select/hash.c
	src/select/select.c
	src/select/strings.c
	src/select/font_face.c
	src/select/format_list_style.c
	src/select/unit.c
	src/utils/utils.c
	src/utils/errors.c
)
set_target_properties(css PROPERTIES SOVERSION ${WISP_ABI})

add_dependencies(css libcss_properties libcss_select_gen libcss_propreg_gen gen_parser)

target_link_libraries(css nsutils parserutils)

# Export generated files include path to consumers
target_include_directories(css PUBLIC "${CMAKE_CURRENT_BINARY_DIR}/src/generated")

if(NOT WIN32)
install(TARGETS css
	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
)
endif()
